<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_home"
        android:icon="@drawable/ic_material_home"
        android:title="@string/action_home"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_orders"
        android:icon="@drawable/ic_material_archive"
        android:title="@string/action_orders"
        app:showAsAction="always"/>

    <!--todo: Enable Settings-->
    <item
        android:title="@string/action_advanced">
        <menu>
            <item
                android:id="@+id/action_settings"
                android:icon="@drawable/ic_material_settings"
                android:title="@string/action_settings"
                app:showAsAction="always"/>
            <item
                android:id="@+id/action_feedback"
                android:icon="@drawable/ic_material_feedback"
                android:title="@string/action_feedback"
                app:showAsAction="always"/>
        </menu>
    </item>
</menu>